--- a/outerMain/outerMain.vcxproj
+++ b/outerMain/outerMain.vcxproj
@@ -117,8 +117,8 @@
   <ItemGroup>
     <ClCompile Include="Controller.cpp" />
     <ClCompile Include="Game.cpp" />
-    <ClCompile Include="observer\Event.cpp" />
-    <ClCompile Include="observer\Observable.cpp" />
+    <ClCompile Include="Observable.cpp" />
+    <ClCompile Include="Observer.cpp" />
     <ClCompile Include="util\Input.cpp" />
     <ClCompile Include="players\Roster.cpp" />
     <ClCompile Include="test\ResourcesDriver.cpp" />
@@ -147,9 +147,8 @@
   <ItemGroup>
     <ClInclude Include="Controller.h" />
     <ClInclude Include="Game.h" />
-    <ClInclude Include="observer\Event.h" />
-    <ClInclude Include="observer\Observable.h" />
-    <ClInclude Include="observer\Observer.h" />
+    <ClInclude Include="Observable.h" />
+    <ClInclude Include="Observer.h" />
     <ClInclude Include="util\Input.h" />
     <ClInclude Include="players\Roster.h" />
     <ClInclude Include="test\Drivers.h" />
